<resources>
    <string name="app_name">CoPA</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_priv">Privileges</string>
    <string name="action_login">Login/Logout</string>
    <string name="button_login">Login</string>
    <string name="title_login">Login</string>
    <string name="title_logout">Logout</string>
    <string name="text_login_username">Username</string>
    <string name="text_login_pw">Password</string>
    <string name="button_search">Search</string>
    <string name="button_priv">other rightholders</string>
    <string name="language">E-Mail/CoPA-Website Language</string>
    <string name="kind_of_notification">Kind of Notification</string>
    <string name="language_german">German</string>
    <string name="language_english">English</string>
    <string name="action_main">Mainpage</string>
    <string name="button_subscription">Change Color</string>
    <string name="details_to_singleevent">More Details</string>
    <string name="all_singleevents">Show all dates</string>
    <string name="button_priv_change">Select date to change</string>
    <string name="action_subscription">subscribed events</string>
    <string name="button_singleevent_change">Change this date</string>
    <string name="language_pick">Pick your language</string>
    <string name="notification_pick">Pick your kind of notification</string>
    <string name="date">Date:</string>
    <string name="new_change">New:</string>
    <string name="time">Time:</string>
    <string name="location">Location:</string>
    <string name="dura">Duration:</string>
    <string name="supervisor">Supervisor:</string>
    <string name="change_apply">Apply</string>
    <string name="search">Search</string>
    <string name="results">Results</string>
    <string name="info">Info</string>
    <string name="dates">Dates</string>
    <string name="subscr">Subscribe</string>
    <string name="mail">E-Mail</string>
    <string name="gcm_auto">Push automatic</string>
    <string name="gcm_manu">Push manual</string>
    <string name="gcm_none">manual</string>
    <string name="success">Success</string>
    <string name="settings_saved">Your settings have been saved.</string>
    <string name="logged_out">You have been logged out.</string>
    <string name="login_ex">Login!</string>
    <string name="not_login">You are not logged in.</string>
    <string name="cp_ex">ClientProtocolException!</string>
    <string name="api_ex">APIException!</string>
    <string name="per_ex">PermissionException!</string>
    <string name="rnp_ex">RequestNotPracticableException!</string>
    <string name="ie_ex">InternalErrorException!</string>
    <string name="io_ex">IOException!</string>
    <string name="login_error">Login Error!</string>
    <string name="pick_color">Pick a color</string>
    <string name="gcm_registered">From GCM: device successfully registered!</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_message">From GCM: you got message!</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="gcm_USER_SETTINGS_CHANGED">UserSettings</string>
    <string name="gcm_SERVER_STATUS_NOTE">CoPA-Server-Status</string>
    <string name="gcm_USER_EVENT_PERMISSIONS_CHANGED">Permissions</string>
    <string name="gcm_SINGLE_EVENT_UPDATE">SingleEvent</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on CoPA Server.</string>
    <string name="server_registered">From CoPA Server: successfully added device!</string>
    <string name="server_unregistered">From Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on CoPA Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on CoPA Server (%1$s).</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string-array name="colors_array">
        <item>blue</item>
        <item>red</item>
        <item>yellow</item>
        <item>pink</item>
        <item>green</item>
        <item>orange</item>
        <item>purple</item>
    </string-array>
    <string name="logout">Logout</string>
    <string name="minutes">min</string>
    <string name="about">About CoPA</string>
    <string name="about_copa">About CoPA</string>
    <string name="copa_text">CoPA stands for Change of Plan Application.</string>
    <string name="nothing">There are no coming events subscribed. \n Use the search to find your events and subscribe them.</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="unsubscribed">You have unsubscribed this event.</string>
    <string name="upcoming">Upcoming</string>
    <string name="refresh">Refresh</string>
    <string name="room">Room:</string>
    <string name="privevents">Events with permissions</string>
    <string name="makechanges">Make changes</string>
    <string name="rightholderlist">List of all rightholders, deputies and owners</string>
    <string name="color">Color</string>
    <string name="details">Details</string>
    <string name="change">Change</string>
    <string name="otherprivs">Privileged</string>
    <string name="details_singleEve">All details of one date</string>
    <string name="allSingle">All dates</string>
    <string name="subscrEve">List of all subscribed events</string>
    <string name="wait">Please wait.</string>
    <string name="welcome">Welcome!</string>
    <string name="welcome_text">Hello, this is the first time you meet CoPA.</string>
    <string name="accept_title">Data protection declaration of consent</string>
    <string name="help">Help</string>
    <string name="help_priv">All of the privileges "Owner", "Deputy", "Rightholder" belong to an event. So you can have a privilege for an specified event. Depending on which privilege you got, you can do different things:\n\n
        <b>Owner</b> \nAn owner is chosen by the CoPA-System or appointed by an admin.\nAs a owner you can appoint and remove deputies and rightholders on the CoPA-Website. The following works from the CoPA-App and CoPA-Website: A owner can change dates of his event and see the other owners, deputies and rightholders. \nFor an owner it is not possible to remove his privilege to be an owner.\n\n
        <b>Deputy</b>\nA deputy is appointed by an owner of an event. \nAs a deputy you can discard your privileges or appoint and remove rightholders on the CoPA-Website.The following works from the CoPA-App and CoPA-Website: A deputy can also see all owners, deputies and rightholders of his event and change dates of his event. \n\n 
        <b>Rightholder</b>\nA rightholder is appointed by an owner or a deputy of an event.\nAs a rightholder you can discard your privileges on the CoPA-Website.You can also change dates with the CoPA-App or on the -Website and see all owners, deputies and rightholders.But a rightholder has no chance to appoint anyone.</string>
    <string name="help_functionality">These are all functionalities that are useable with the CoPA-App:\n\n
        <b>Login</b>\n
        Just use your uni-login-data to authenticate.You can reach the loginpage with the "Menu"-button for example on the startpage if you are not logged in.\n\n
        <b>Logout</b>\n
        You can reach the logoutpage with the "Menu"-button on the startpage if you are logged in.\n\n
        <b>Search</b>\n
        The search is reachable with the "Menu"-button for example on the startpage if you are logged in. Just click through the categories and enter a searchterm. Your request will automatically start if there are no following categories pickable.\n\n
        <b>Subscribe</b>\n
        Use the search to find the event you want to subscribe. Then click the "subscribe"-button. You need to be logged in for this. After you have successfully subscribed an event you will be informed about changes of dates that belong to it. How you will be informed belongs on your chosen settings.\n\n
        <b>Unsubscribe</b>\n
        To unsubscribe an event find it in the list of your subscribed events(look at "Look up subscribed events") and click the button "unsubscribe" if you are logged in. You will be no longer informed about changes that belong to this event.\n\n
        <b>Get updates</b>\n
        Depending on your chosen settings you will be automatically informed about changes or you have to use the "refresh"-button on the startpage. For more details have a look at "Possible settings".\n\n
        <b>Look up subscribed events</b>\n
        With a click on the "Menu"-button you can select "Subscribed events" and see all events for which you get updates.\n\n
        <b>Look up information of an event</b>\n
        Just search(look at "search") the event that you are interested in and click on "info".\n\n
        <b>Look up events with privileges</b>\n
         With a click on the "Menu"-button you can select "privileges" and see all events for which you have privileges.\n\n
        <b>Look up owners,deputies and rightholders of an event</b>\n
        You can only see them if you have privileges for this event. Use the "Menu"-button to switch to the list of events with privileges and click on "privileged".\n\n
        <b>Change date of an event</b>\n
        Find the date you want to change for example by clicking on the event to which it belongs to this date. Then enter your changes and click on "Apply" to change this date.\n\n
        <b>Change color of an event</b>\n
        Use your list of subscribed events (look at "Look up subscribed events") and click on the button "color" to select one.\n\n
        <b>Change e-mail-/CoPA-Website-language</b>\n
        Click on "Settings" in the menu that opens by pressing the "Menu"-button and use the "save" button to confirm your changes. This will set the language for the CoPA-Website and e-mails. For details about the possibilities look at "Possible settings".\n\n
        <b>Change kind of notification</b>\n
        Click on "Settings" in the menu that opens by pressing the "Menu"-button and use the "save" button to confirm your changes. This will choose the way on which you are informed. For details about the possibilities look at "Possible settings".\n\n
        \nThese functionalities are only reachable from the CoPA-Website:\n
        <b>Relinquish a privilege</b>\n
        You can give up your privileges if you are not a owner. For this use the CoPA-Website.\n\n
        <b>Appoint or remove deputies/rightholders</b>\n
        Depending on your privilege(look at"About privileges") you can delegate or remove privileges to another person. For this use the CoPA-Website.
        </string>
    <string name="remove">Remove</string>
    <string name="comment">Comment:</string>
    <string name="rightholder">Rightholders:</string>
    <string name="deputy">Deputies:</string>
    <string name="owner">Owners:</string>
	<string name="only_updates">Only updates</string>
	<string name="show_more">Show more dates</string>
</resources>