<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item android:id="@+id/action_log"
        android:title="@string/action_login"
        android:orderInCategory="1" />
    <item android:id="@+id/action_search"
        android:title="@string/action_search" 
        android:orderInCategory="3" />
    <item android:id="@+id/action_priv"
        android:title="@string/action_priv" 
        android:orderInCategory="9"/>
    <item android:id="@+id/action_settings"
        android:orderInCategory="9"
        android:title="@string/action_settings" />
    <item android:id="@+id/action_subscription"
        android:title="@string/action_subscription" 
        android:orderInCategory="8"/>
    <item android:id="@+id/action_main"
        android:title="@string/action_main" 
        android:orderInCategory="2"/>
        
    

</menu>