<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/main_text"
        android:layout_below="@+id/languageSpinner"
        android:layout_marginTop="25dp"
        android:text="@string/kind_of_notification" />

    <Spinner
        android:id="@+id/languageSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/notification"
        android:layout_below="@+id/language_text"
        android:entries="@array/language_entries"
        android:prompt="@string/language_pick"
        android:scrollbarAlwaysDrawVerticalTrack="true" />

    <TextView
        android:id="@+id/language_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/languageSpinner"
        android:layout_alignParentTop="true"
        android:text="@string/language" />

    <Spinner
        android:id="@+id/notificationSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/notification"
        android:layout_below="@+id/notification"
        android:entries="@array/notification_entries"
        android:prompt="@string/notification_pick" />

</RelativeLayout>