<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/background"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/eventpriv_title"
        style="@style/text_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/rightholderlist" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/eventpriv_title"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/eventpriv_rightholder"
            style="@style/text_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rightholder"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ListView
            android:id="@+id/eventpriv_list_rightholder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </ListView>

        <TextView
            android:id="@+id/eventpriv_deputy"
            style="@style/text_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deputy"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ListView
            android:id="@+id/eventpriv_list_deputy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </ListView>

        <TextView
            android:id="@+id/eventpriv_owner"
            style="@style/text_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/owner"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ListView
            android:id="@+id/eventpriv_list_owner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </ListView>
    </LinearLayout>

</RelativeLayout>