<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/main_text"
        style="@style/text_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/test_button_main"
        android:text="@string/upcoming" />

    <ListView
        android:id="@+id/singleEventView"
        style="@style/background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/main_text"
        android:layout_below="@+id/main_show_more"
        android:cacheColorHint="#00000000"
        android:clickable="true"
        android:divider="@null"
        android:dividerHeight="0dp" >
    </ListView>

    <Button
        android:id="@+id/test_button_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/main_only_updates"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:onClick="onRefreshButtonClick"
        android:text="@string/refresh" />

    <TextView
        android:id="@+id/main_nothing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/test_button_main" />

    <Button
        android:id="@+id/main_only_updates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/main_text"
        android:layout_below="@+id/main_text"
        android:onClick="onOnlyUpdatesButtonClick"
        android:text="@string/only_updates" />

    <Button
        android:id="@+id/main_show_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/main_only_updates"
        android:onClick="onShowMoreButtonClick"
        android:text="@string/show_more" />

</RelativeLayout>